# LFUCache

./: .gitignore  CMakeLists.txt  README.md
include/: cache_test.hpp  lfu_cache.hpp  perfect_cache.hpp
src/: cache_test.cpp  graphic_compare.ipynb  lfu.cpp  lfu_cache.cpp  main.cpp  perfect.cpp  perfect_cache.cpp  run_binary_test.cpp
test/: test11.txt  test12.txt  test13.txt  test14.txt
